# forex-nbr

./: Cargo.toml  LICENSE.md  README.md  example.xml
src/: api.rs  endpoint.rs  lib.rs  response.rs
